samples/_failures_safe/1761513704_89ee44_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a08d0ea5.c: In function ‘tokenize’:
./samples/SAFE/__tmp_a08d0ea5.c:160:9: error: expected expression at end of input
  160 |         return
      |         ^~~~~~
./samples/SAFE/__tmp_a08d0ea5.c:160:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a08d0ea5.c:160:9: error: expected declaration or statement at end of input
